<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fountain</string>

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>

    <string name="action_bluetooth">on/off</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="no_permission">This application won\'t work without Bluetooth permission grant.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear history</string>

    <string name="search_message">Pair new device…</string>
    <string name="none_paired">No paired devices</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- Настройки -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>
    <string name="log_limit">Log limit</string>
    <string name="log_limit_summary">Clear log on max size exceeded</string>
    <string name="log_limit_size">Log buffer size (lines)</string>

    <string name="commands_mode">Input mode:</string>
    <string name="checksum_mode">Checksum</string>
    <string name="checksum_mode_summary">Add checksum to command</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>




    <string name="SetOnBluetooth">Set On Bluetooth</string>
    <string name="SetOffBluetooth">Set Off Bluetooth</string>
    <string name="Query">Query</string>
    <string name="DiscoverDevices">Discover Devices</string>
    <string name="Connect">Connect</string>
    <string name="Send">Send</string>
    <string name="Receive">Receive</string>
    <string name="Visible">Visible</string>
    <string name="Exit">Exit</string>
    <string name="ClientConnection">Client Connection</string>
    <string name="ServerConnection">Server Connection</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>
    <string name="Run">Run</string>
    <string name="Hello">Hello</string>
    <string name="CloseConnection">Close Connection</string>
    <string name="SendSomeText">Send Some Text</string>
    <string name="ReadSensorData">Read Sensor Data</string>
    <string name="Temperature">Tmperature</string>
    <string name="Humidity">Humidity</string>
    <string name="ClearText">Clear Text</string>
    <string name="Distance">Distance</string>
    <string name="Velocity">Velocity</string>
    <string name="PlaySeq">Play Seq</string>
    <string name="StopSeq">Stop Seq</string>
    <string name="PlayAll">Play All</string>
    <string name="RandomPlay">Random Play</string>
    <string name="CreateSeq">Create Seq</string>
    <string name="DeleteSeq">Delete Seq</string>

</resources>